Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis
Peter L Jones
Devin Anderson
Josh Green
Mario Lang
Arnold Krille
Jan Engelhardt
Adrian Knoth
David Garcia Garzon
Valerio Pilo

---------------------------
  Jackdmp changes log
---------------------------

2011-04-02 Stephane Letz  <letz@grame.fr>

	* Netdriver can now ask for in/out values from the master (in progress).
	* Correct drivers parameter settings.

2011-04-01 Stephane Letz  <letz@grame.fr>

	* Merge newer-midi branch (Devin Anderson redesign of the MIDI drivers: alsarawmidi, ffado, coremidi and winmme).
	* Cleanup JackThreadedDriver::Stop.
	* Correct JackNetOneDriver::Close.
	* Correction in jackdmp.cpp: notify_server_stop should be done after server destruction.
	* Improve error management in JackNetDriver. 

2011-03-30 Stephane Letz  <letz@grame.fr>

	* Version 1.9.8 started. 

2011-03-29 Stephane Letz  <letz@grame.fr>

	* Synchronize JackWeakAPI.cpp with new APIs. 

2011-03-28 Stephane Letz  <letz@grame.fr>

	* Correction of jack_connect/jack_disconnect: use of jack_activate and volatile keyword for thread shared variable.
	* Correction of JackNetOneDriver for latest CELT API.

2011-03-24 Stephane Letz  <letz@grame.fr>

	* Implement renaming in JackDriver::Open to avoid name collision (thanks Devin Anderson).
	* Correct alsa_driver_restart (thanks Devin Anderson).

2011-03-23 Stephane Letz  <letz@grame.fr>

	* Devin Anderson server-ctl-proposal branch merged on trunk: improved control API, slave backend reworked.

2011-03-14 Stephane Letz  <letz@grame.fr>

	* Correct JackEngine::NotifyGraphReorder, update JackDebugClient with latest API.

2011-03-13 Stephane Letz  <letz@grame.fr>

	* Rework internal slave driver management, JackServerGlobals now handle same parameters as jackdmp.

2011-03-11 Stephane Letz  <letz@grame.fr>
